Presenting error alert on login screen

--- a/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
+++ b/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
@@ -8,6 +8,12 @@
 "username" = "Username";
 "password" = "Password";
 "login" = "Login";
+"ok" = "OK";
 
 // error mesasges
+"error" = "Error";
 "validateMustNotBeEmpty" = "Field can't be empty";
+"generalError" = "Something went wrong. Please try again.";
+
+// login errors
+"invalidUsernameOrPassword" = "Invalid username or password.";
