Product and order list makeup

--- a/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
+++ b/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
@@ -20,6 +20,11 @@
 "mainTabItemProducts" = "Products";
 "mainTabItemOrders" = "Orders";
 
+// order list
+"noActiveOrders" = "No active orders";
+"orderedOn" = "Ordered on";
+"total" = "Total";
+
 // product
 "noProducts" = "No products";
 "productDateOfProduction" = "Production date";
