--- a/shunka-shop/shunka-shop/Resources/sr.lproj/Localizable.strings
+++ b/shunka-shop/shunka-shop/Resources/sr.lproj/Localizable.strings
@@ -20,6 +20,11 @@
 "mainTabItemProducts" = "Производи";
 "mainTabItemOrders" = "Поруџбине";
 
+// order list
+"noActiveOrders" = "Нема активних поруџбина";
+"orderedOn" = "Поручено";
+"total" = "Цена";
+
 // product
 "noProducts" = "Нема производа";
 "productDateOfProduction" = "Датум производње";
