Single selection list view. Color+Theme color vars renamed to avoid confusion with SwiftUI color vars.

--- a/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
+++ b/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
@@ -25,6 +25,9 @@
 "orderedOn" = "Ordered on";
 "total" = "Total";
 
+// create order
+"createOrder" = "Create order";
+
 // product
 "noProducts" = "No products";
 "productDateOfProduction" = "Production date";
