FormButton introduced to allow user actions in form

--- a/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
+++ b/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
@@ -27,6 +27,7 @@
 
 // create order
 "createOrder" = "Create order";
+"selectCustomer" = "Select customer";
 
 // product
 "noProducts" = "No products";
