--- a/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
+++ b/shunka-shop/shunka-shop/Resources/en.lproj/Localizable.strings
@@ -15,6 +15,7 @@
 "loading" = "Loading...";
 "register" = "Register";
 "cancel" = "Cancel";
+"save" = "Save";
 
 // main tab items
 "mainTabItemProducts" = "Products";
