--- a/shunka-shop/shunka-shop/Resources/sr.lproj/Localizable.strings
+++ b/shunka-shop/shunka-shop/Resources/sr.lproj/Localizable.strings
@@ -15,6 +15,7 @@
 "loading" = "Учитавање...";
 "register" = "Додај";
 "cancel" = "Откажи";
+"save" = "Сачувај";
 
 // main tab items
 "mainTabItemProducts" = "Производи";
